--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "author": "Jackson Isack <jacksonisack@gmail.com>",
   "license": "ISC",
@@ -12,8 +12,10 @@
     "fe-bootup": "./index.js"
   },
   "dependencies": {
+    "cfonts": "^1.1.3",
     "chalk": "^2.3.1",
     "commander": "^2.14.1",
+    "inquirer": "^5.1.0",
     "nodegit": "^0.20.3"
   }
 }
